--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "src/index.ts",
   "type": "commonjs",
   "scripts": {
-    "start": "node ./dist/main.js",
+    "start": "tsc &&  node ./dist/main.js",
     "dev": "nodemon",
     "build": "tsc",
     "lint": "eslint ./src/**",
